--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
       <iframe src="rows.html" class="bokeh-iframe"></iframe>
     </div>
 
+    <div class="section yellow-bg padded">
+      <div class="text-center">
+        <h1 class="title" style="margin-bottom: 10px">Onderzoeksvragen</h1>
+      </div>
+
+      <div class="flex-center">
+        <div class="card padded-horizontal">
+          <ol style="list-style: none; padding: 0;">
+            <li><span class="badge yellow-bg white" style="margin-right: 20px">1.</span>a) Zijn er food prices die een positieve/negatieve relatie tonen en bestaat deze correlatie door de jaren heen of alleen in een bepaalde periode?<br>
+            <span class="badge white" style="margin-right: 20px">1.</span>b) Is het mogelijk om de ingrediënten van een product te vinden in een ander product?</li><br>
+            <li><span class="badge yellow-bg white" style="margin-right: 20px">2.</span>Laten landen in dezelfde regio's, vergelijkbare prijsverschillen zien? Is hier een verklaring voor te vinden?</li><br>
+            <li><span class="badge yellow-bg white" style="margin-right: 20px">3.</span>Welke correlaties kunnen worden gevonden tussen de food price data en ondervoeding?</li>
+          </ol>
+        </div>
+      </div>
+    </div>
+
     <script src="presentation.js"></script>
   </body>
 </html>
