Added graphs to 1a index.html

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <div class="flex-center">
         <div class="card padded-horizontal">
           <ol style="list-style: none; padding: 0;">
-            <li><span class="badge yellow-bg white" style="margin-right: 20px">1</span>a) Zijn er food prices die een positieve/negatieve relatie tonen en bestaat deze correlatie door de jaren heen of alleen in een bepaalde periode?<br>
-            <span class="badge white" style="margin-right: 20px">1</span>b) Is het mogelijk om de ingredi&euml;nten van een product te vinden in een ander product?</li><br>
+            <li><span class="badge yellow-bg white" style="margin-right: 20px">1</span>a. Zijn er food prices die een positieve/negatieve relatie tonen en bestaat deze correlatie door de jaren heen of alleen in een bepaalde periode?<br>
+            <span class="badge white" style="margin-right: 20px">1</span>b. Is het mogelijk om de ingredi&euml;nten van een product te vinden in een ander product?</li><br>
             <li><span class="badge green-bg white" style="margin-right: 20px">2</span>Laten landen in dezelfde regio's, vergelijkbare prijsverschillen zien? Is hier een verklaring voor te vinden?</li><br>
             <li><span class="badge blue-bg white" style="margin-right: 20px">3</span>Welke correlaties kunnen worden gevonden tussen de food price data en ondervoeding?</li>
           </ol>
@@ -77,8 +77,18 @@
     </div>
 
     <div class="section full yellow-bg">
-      <h3 class="white hint">1 a. Correlatie tussen prijzen van producten</h3>
+      <h3 class="hint white">1 a. Correlatie tussen prijzen van producten</h3>
 
+    </div>
+
+    <div class="section full">
+      <h3 class="hint right">1 a. Correlatie tussen prijzen van producten</h3>
+      <iframe src="bokeh_correlations_histogram.html" class="bokeh-iframe"></iframe>
+    </div>
+
+    <div class="section full">
+      <h3 class="hint right">1 a. Correlatie tussen prijzen van producten</h3>
+      <iframe src="beef_and_lamb.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full yellow-bg">
