--- a/index.html
+++ b/index.html
@@ -76,24 +76,53 @@
       </div>
     </div>
 
-    <div class="section full yellow-bg">
-      <h3 class="hint white">1 a. Correlatie tussen prijzen van producten</h3>
-
-    </div>
-
     <div class="section full">
       <h3 class="hint right">1 a. Correlatie tussen prijzen van producten</h3>
       <iframe src="bokeh_correlations_histogram.html" class="bokeh-iframe"></iframe>
     </div>
 
+    <div class="section full yellow-bg">
+      <h3 class="hint white">1 a. Correlatie tussen prijzen van producten</h3>
+      <div class="flex-center" style="height: 100vh">
+        <div class="card">
+          <table class="table table-striped table-bordered no-margin">
+            <caption>Top 20 hoogste positieve gemiddelde correlaties wereldwijd</caption>
+
+            <thead>
+              <tr><td>Product 1</td><td>Product 2</td><td>Som</td><td>Gemiddelde</td></tr>
+            </thead>
+
+            <tbody>
+              <tr><td>Milk</td><td>Sour cream</td><td>25.64</td><td>0.99</td>
+              <tr><td>Sour cream</td><td>Butter</td><td>25.55</td><td>0.98</td>
+              <tr><td>Milk</td><td>Butter</td><td>25.49</td><td>0.98</td>
+              <tr><td>Curd</td><td>Sour cream</td><td>25.47</td><td>0.98</td>
+              <tr><td>Curd</td><td>Milk</td><td>25.46</td><td>0.98</td>
+              <tr><td>Ghee</td><td>Oil (cooking)</td><td>4.87</td><td>0.97</td>
+              <tr><td>Curd</td><td>Butter</td><td>25.24</td><td>0.97</td>
+              <tr><td>Beans</td><td>Catarino</td><td>14.50</td><td>0.97</td>
+              <tr><td>Oil (cotton)</td><td>Oil (vegetable)</td><td>4.83</td><td>0.97</td>
+              <tr><td>Chicken</td><td>Sausage</td><td>24.69</td><td>0.95</td>
+              <tr><td>Buffalo</td><td>Beef</td><td>10.43</td><td>0.95</td>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
     <div class="section full">
-      <h3 class="hint right">1 a. Correlatie tussen prijzen van producten</h3>
+      <h3 class="hint right">Correlatie: 0.9990</h3>
       <iframe src="beef_and_lamb.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full yellow-bg">
       <h3 class="white hint">1 b. Detecteren van ingredi&euml;nten</h3>
 
+    </div>
+
+    <div class="section full">
+      <h3 class="hint right">1 b. Detecteren van ingredi&euml;nten</h3>
+      <iframe src="milk_products.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full green-bg">
