--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <div class="section full dark-bg">
       <div class="text-center">
-        <h1 class="white title" style="margin-top: 80px; margin-bottom: 10px">title</h1>
-        <p class="white">Some small introduction. But where did the chess pieces really go?</p>
+        <h1 class="white title" style="margin-top: 80px; margin-bottom: 10px"><i>Food prices</i> in ontwikkelingslanden</h1>
+        <p class="white">Een onderzoek naar verbanden tussen prijsfluctuaties op verschillende markten. Van welke landen hebben we data?</p>
       </div>
 
       <div class="chart-wrapper" id="total_rows">
@@ -32,7 +32,7 @@
     <div class="section white-bg padded">
       <div class="text-center">
         <h1 class="title" style="margin-bottom: 10px">Onze data</h1>
-        <p>Een dataset met 800k rijen van huppeldepup</p>
+        <p>Een dataset met 800k rijen van informatie over de prijzen van verschillende producten</p>
       </div>
 
       <div class="flex-center">
