Added Sudan graphs, slides

--- a/index.html
+++ b/index.html
@@ -115,11 +115,6 @@
       <iframe src="beef_and_lamb.html" class="bokeh-iframe"></iframe>
     </div>
 
-    <div class="section full yellow-bg">
-      <h3 class="white hint">1 b. Detecteren van ingredi&euml;nten</h3>
-
-    </div>
-
     <div class="section full">
       <h3 class="hint right">1 b. Detecteren van ingredi&euml;nten</h3>
       <iframe src="milk_products.html" class="bokeh-iframe"></iframe>
@@ -135,23 +130,29 @@
 
     </div>
 
-    <script src="presentation.js"></script>
-
     <div class="section full dark-bg">
+      <h3 class="right white hint">Extra: conflicten in Zuid Soedan</h3>
       <div class="grid">
-        <div><iframe src="sudan1.html" class="bokeh-iframe" style="height: 100%; min-height: 50vh"></iframe></div>
-        <div class="span-row-2"><iframe src="https://www.theguardian.com/world/2016/jul/10/south-sudan-capital-juba-violence-salva-kiir" class="bokeh-iframe"></iframe></div>
-        <div><iframe src="sudan2.html" class="bokeh-iframe" style="height: 100%; min-height: 50vh"></iframe></div>
+        <div><iframe src="sudan1.html" class="bokeh-iframe" style="background: #fff; height: 100%; min-height: 50vh"></iframe></div>
+        <div class="span-row-2 flex-center">
+          <div class="text-center">
+            <img src="https://static1.squarespace.com/static/5292fdeae4b007679e7e848a/t/52d6fb93e4b0201eed8bbf7b/1389820820643/the_new_york_times_logo_white%5B1%5D.png" style="width: 300px; height: auto">
+            <p class="white" style="opacity: 0.9; font-style: italic; font-size: 14px">July 8, 2016</p>
+            <h2 class="white" style="font-family: serif"><i>Factional Fighting Breaks Out in South Sudan's Capital</i></h2>
+            <img src="https://www.capitalfm.co.ke/news/files/2016/08/441de77c5ae32b31420dd7bd6294fcb50e41f063.jpg" style="width: 500px; height: auto;">
+            <div style="width: 500px; margin: 0 auto">
+              <p class="white" style="opacity: 0.9; font-style: italic; font-size: 13px; text-align: left">A woman and child pictured at a make-shift camp in the Amuru District of Uganda, which borders war-torn South Sudan, on July 16, 2016 &nbsp;&nbsp;&copy; AFP/File / Isaac Kasamani</p>
+            </div>
+          </div>
+        </div>
+        <div><iframe src="sudan2.html" class="bokeh-iframe" style="background: #fff; height: 100%; min-height: 50vh"></iframe></div>
       </div>
-
-
-
-
     </div>
 
     <div class="section full dark-bg">
-      <h3 class="white hint">Zuid Soedan</h3>
-
+      <iframe src="sudan2alt.html" class="bokeh-iframe"></iframe>
     </div>
+
+    <script src="presentation.js"></script>
   </body>
 </html>
