--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
 
     <div class="section full red-bg">
       <h3 class="white hint">Extra: tomayto tomahto</h3>
+      <iframe src="tomatoes_national.html" class="bokeh-iframe"></iframe>
+    </div>
+
+    <div class="section full red-bg">
+      <h3 class="white hint">Extra: tomayto tomahto</h3>
+      <iframe src="tomatoes_regional.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full dark-bg">
