--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
       <div class="flex-center" style="height: 100vh">
         <div class="card">
           <table class="table table-striped table-bordered no-margin">
-            <caption>Top 20 hoogste positieve gemiddelde correlaties wereldwijd</caption>
-
             <thead>
               <tr><td>Product 1</td><td>Product 2</td><td>Som</td><td>Gemiddelde</td></tr>
             </thead>
 
             <tbody>
-              <tr><td>Milk</td><td>Sour cream</td><td>25.64</td><td>0.99</td>
-              <tr><td>Sour cream</td><td>Butter</td><td>25.55</td><td>0.98</td>
-              <tr><td>Milk</td><td>Butter</td><td>25.49</td><td>0.98</td>
-              <tr><td>Curd</td><td>Sour cream</td><td>25.47</td><td>0.98</td>
-              <tr><td>Curd</td><td>Milk</td><td>25.46</td><td>0.98</td>
-              <tr><td>Ghee</td><td>Oil (cooking)</td><td>4.87</td><td>0.97</td>
-              <tr><td>Curd</td><td>Butter</td><td>25.24</td><td>0.97</td>
-              <tr><td>Beans</td><td>Catarino</td><td>14.50</td><td>0.97</td>
-              <tr><td>Oil (cotton)</td><td>Oil (vegetable)</td><td>4.83</td><td>0.97</td>
-              <tr><td>Chicken</td><td>Sausage</td><td>24.69</td><td>0.95</td>
-              <tr><td>Buffalo</td><td>Beef</td><td>10.43</td><td>0.95</td>
+              <tr><td>Milk</td><td>Sour cream</td><td>25.64</td><td>0.99</td></tr>
+              <tr><td>Sour cream</td><td>Butter</td><td>25.55</td><td>0.98</td></tr>
+              <tr><td>Milk</td><td>Butter</td><td>25.49</td><td>0.98</td></tr>
+              <tr><td>Curd</td><td>Sour cream</td><td>25.47</td><td>0.98</td></tr>
+              <tr><td>Curd</td><td>Milk</td><td>25.46</td><td>0.98</td></tr>
+              <tr><td>Ghee</td><td>Oil (cooking)</td><td>4.87</td><td>0.97</td></tr>
+              <tr><td>Curd</td><td>Butter</td><td>25.24</td><td>0.97</td></tr>
+              <tr><td>Beans</td><td>Catarino</td><td>14.50</td><td>0.97</td></tr>
+              <tr><td>Oil (cotton)</td><td>Oil (vegetable)</td><td>4.83</td><td>0.97</td></tr>
+              <tr><td>Chicken</td><td>Sausage</td><td>24.69</td><td>0.95</td></tr>
+              <tr><td>Buffalo</td><td>Beef</td><td>10.43</td><td>0.95</td></tr>
             </tbody>
+
+            <caption>10 hoogste positieve gemiddelde correlaties wereldwijd</caption>
           </table>
         </div>
       </div>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="section full">
-      <h3 class="hint">2. Regionale correlaties</h3>
+      <h3 class="hint">3. Correlatie tussen prijs en ondervoeding</h3>
       <iframe src="question3.html" class="bokeh-iframe"></iframe>
     </div>
 
@@ -141,6 +141,12 @@
         <div style="width: 100%; height: 40px" class="header"></div>
         <div class="chart-container" style="width: 100%; height: 85vh; padding-bottom: 0; position: relative"></div>
       </div>
+    </div>
+
+    <div class="section full blue-bg" style="padding-top: 50px">
+      <h3 class="white hint">3. Correlatie tussen prijs en ondervoeding</h3>
+
+
     </div>
 
     <div class="section full red-bg">
