--- a/index.html
+++ b/index.html
@@ -146,7 +146,20 @@
     <div class="section full blue-bg" style="padding-top: 50px">
       <h3 class="white hint">3. Correlatie tussen prijs en ondervoeding</h3>
 
+      <div class="flex-center" style="height: 100vh">
+        <div class="card">
+          <table class="table table-striped table-bordered no-margin">
+            <thead>
+              <tr><td>Product</td><td>Land</td><td>r</td></tr>
+            </thead>
 
+            <tbody>
+            </tbody>
+
+            <caption>10 hoogste positieve product-ondervoedings-correlaties wereldwijd (zonder minimum data)</caption>
+          </table>
+        </div>
+      </div>
     </div>
 
     <div class="section full red-bg">
