--- a/index.html
+++ b/index.html
@@ -147,16 +147,49 @@
       <h3 class="white hint">3. Correlatie tussen prijs en ondervoeding</h3>
 
       <div class="flex-center" style="height: 100vh">
-        <div class="card">
+        <div class="card" style="width: 500px; margin-left: 50px; margin-right: 50px">
           <table class="table table-striped table-bordered no-margin">
             <thead>
               <tr><td>Product</td><td>Land</td><td>r</td></tr>
             </thead>
 
             <tbody>
+                <tr><td>Diesel</td><td>Kenya</td><td>0.96</td></tr>
+                <tr><td>Fish</td><td>Congo</td><td>0.96</td></tr>
+                <tr><td>Kerosene</td><td>Kenya</td><td>0.96</td></tr>
+                <tr><td>Groundnuts</td><td>Congo</td><td>0.95</td></tr>
+                <tr><td>Maize</td><td>Swaziland</td><td>0.95</td></tr>
+                <tr><td>Petrol</td><td>Timor-Leste</td><td>0.94</td></tr>
+                <tr><td>Beef</td><td>Congo</td><td>0.94</td></tr>
+                <tr><td>Petrol</td><td>Laos</td><td>0.92</td></tr>
+                <tr><td>Sugar (brown)</td><td>Swaziland</td><td>0.91</td></tr>
+                <tr><td>Oil (palm)</td><td>Central African Republic</td><td>0.90</td></tr>
             </tbody>
 
             <caption>10 hoogste positieve product-ondervoedings-correlaties wereldwijd (zonder minimum data)</caption>
+          </table>
+        </div>
+
+        <div class="card" style="width: 500px; margin-left: 50px; margin-right: 50px">
+          <table class="table table-striped table-bordered no-margin">
+            <thead>
+              <tr><td>Product</td><td>Land</td><td>r</td></tr>
+            </thead>
+
+            <tbody>
+                <tr><td>Maize</td><td>Swaziland</td><td>0.95</td></tr>
+                <tr><td>Maize meal</td><td>Swaziland</td><td>0.89</td></tr>
+                <tr><td>Wheat flour</td><td>Swaziland</td><td>0.88</td></tr>
+                <tr><td>Potatoes</td><td>Guatemala</td><td>0.85</td></tr>
+                <tr><td>Beef</td><td>Guatemala</td><td>0.83</td></tr>
+                <tr><td>Rice</td><td>Djibouti</td><td>0.82</td></tr>
+                <tr><td>Milk (powder)</td><td>Guatemala</td><td>0.81</td></tr>
+                <tr><td>Plantains</td><td>Guatemala</td><td>0.80</td></tr>
+                <tr><td>Bananas</td><td>Guatemala</td><td>0.79</td></tr>
+                <tr><td>Eggs</td><td>Guatemala</td><td>0.78</td></tr>
+            </tbody>
+
+            <caption>10 hoogste positieve product-ondervoedings-correlaties wereldwijd (minimum data 60 maanden)</caption>
           </table>
         </div>
       </div>
