--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div class="section full">
       <h3 class="hint">3. Correlatie tussen prijs en ondervoeding</h3>
-      <iframe src="question3.html" class="bokeh-iframe"></iframe>
+      <iframe src="undernourishment_in_regions.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full blue-bg" style="padding-top: 50px">
@@ -141,6 +141,8 @@
         <div style="width: 100%; height: 40px" class="header"></div>
         <div class="chart-container" style="width: 100%; height: 85vh; padding-bottom: 0; position: relative"></div>
       </div>
+
+      <div class="seperator white-bg"></div>
     </div>
 
     <div class="section full blue-bg" style="padding-top: 50px">
@@ -193,6 +195,18 @@
           </table>
         </div>
       </div>
+    </div>
+
+    <div class="section full">
+      <h3 class="hint">3. Correlatie tussen prijs en ondervoeding</h3>
+      <iframe src="guatemala_prices.html" class="bokeh-iframe"></iframe>
+
+      <div class="seperator blue-bg"></div>
+    </div>
+
+    <div class="section full">
+      <h3 class="hint">3. Correlatie tussen prijs en ondervoeding</h3>
+      <iframe src="exchangeplot.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full red-bg">
