--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 
     <div class="section full green-bg">
       <h3 class="white hint">2. Regionale correlaties</h3>
-
+      <iframe src="question.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full">
       <h3 class="hint">3. Correlatie tussen prijs en ondervoeding</h3>
-      <iframe src="undernourishment_in_regions.html" class="bokeh-iframe"></iframe>
+      <iframe src="average_correlation_between_countries_per_product.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full blue-bg" style="padding-top: 50px">
@@ -210,12 +210,12 @@
     </div>
 
     <div class="section full red-bg">
-      <h3 class="white hint">Extra: tomayto tomahto</h3>
+      <h3 class="white centerhint">Extra: tomayto tomahto</h3>
       <iframe src="tomatoes_national.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full red-bg">
-      <h3 class="white hint">Extra: tomayto tomahto</h3>
+      <h3 class="white centerhint">Extra: tomayto tomahto</h3>
       <iframe src="tomatoes_regional.html" class="bokeh-iframe"></iframe>
     </div>
 
