--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsbsrcRaYja_c6DNVahR2d19v7MSm62KQ"
+    type="text/javascript"></script>
+
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="chartkick.js"></script>
 
