--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="section full dark-bg">
       <div class="text-center">
-        <h1 class="white title" style="margin-top: 80px; margin-bottom: 10px">Prijzen van eten en andere producten in ontwikkelingslanden</h1>
+        <h1 class="white title" style="margin-top: 80px; margin-bottom: 10px">Productprjizen in ontwikkelingslanden</h1>
         <p class="white">Een onderzoek naar verbanden tussen prijsfluctuaties op verschillende markten.</p>
       </div>
 
