--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 
     <div class="section full green-bg">
       <h3 class="white hint">2. Regionale correlaties</h3>
-      <iframe src="question.html" class="bokeh-iframe"></iframe>
+      <iframe src="average_correlation_between_countries_per_product.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full">
       <h3 class="hint">3. Correlatie tussen prijs en ondervoeding</h3>
-      <iframe src="average_correlation_between_countries_per_product.html" class="bokeh-iframe"></iframe>
+      <iframe src="undernourishment_in_regions.html" class="bokeh-iframe"></iframe>
     </div>
 
     <div class="section full blue-bg" style="padding-top: 50px">
@@ -219,19 +219,8 @@
       <iframe src="tomatoes_regional.html" class="bokeh-iframe"></iframe>
     </div>
 
-    <div class="section full green-bg">
-      <h3 class="hint">Extra: negatieve correlatie Cassava leaves en Cassava flour</h3>
-      <!-- <div class="grid">
-        <div><iframe src="cassave1.html" class="bokeh-iframe" style="background: #fff; height: 100%; min-height: 50vh; border: 5px solid #37C656"></iframe></div>
-        <div><iframe src="cassave2.html" class="bokeh-iframe" style="background: #fff; height: 100%; min-height: 50vh; border: 5px solid #37C656"></iframe></div>
-        <div><iframe src="cassave3.html" class="bokeh-iframe" style="background: #fff; height: 100%; min-height: 50vh; border: 5px solid #37C656"></iframe></div>
-        <div><iframe src="cassave4.html" class="bokeh-iframe" style="background: #fff; height: 100%; min-height: 50vh; border: 5px solid #37C656"></iframe></div>
-      </div> -->
-      <iframe src="cassave4.html" class="bokeh-iframe" style="background: #fff"></iframe>
-    </div>
-
     <div class="section full dark-bg">
-      <h3 class="white hint">Extra: conflicten in Zuid Soedan</h3>
+      <h3 class="right white hint">Extra: conflicten in Zuid Soedan</h3>
       <div class="grid">
         <div><iframe src="sudan1.html" class="bokeh-iframe" style="background: #fff; height: 100%; min-height: 50vh"></iframe></div>
         <div class="span-row-2 flex-center">
