--- a/index.html
+++ b/index.html
@@ -127,8 +127,55 @@
       <iframe src="milk_products.html" class="bokeh-iframe"></iframe>
     </div>
 
-    <div class="section full green-bg">
+    <div class="section full green-bg" style="padding-top: 50px">
       <h3 class="white hint">2. Regionale correlaties</h3>
+      <div class="flex-center" style="height: 100vh">
+        <div class="card" style="width: 500px; margin-left: 50px; margin-right: 50px">
+          <table class="table table-striped table-bordered no-margin">
+            <thead>
+              <tr><td>Product</td><td>Correlatie tussen</td><td>Regio</td><td>r</td></tr>
+            </thead>
+
+            <tbody>
+              <tr><td>Wheat</td><td>India and Nepal</td><td>South Asia</td><td>0.96</td></tr>
+              <tr><td>Oil (sunflower)</td><td>Lesotho and Swaziland</td><td>Sub-Saharan Africa</td><td>0.96</td></tr>
+              <tr><td>Beef</td><td>Kyrgyzstan and Tajikistan</td><td>Europe & Central Asia</td><td>0.96</td></tr>
+              <tr><td>[…]</td><td>[…]</td><td>[…]</td><td>[…]</td></tr>
+              <tr><td>Oil (vegetable)</td><td>Guatemala and Haiti</td><td>Latin America & Caribbean</td><td>-0.87</td></tr>
+              <tr><td>Wheat flour</td><td>Iraq and Egypt</td><td>Middle East & North Africa</td><td>-0.89</td></tr>
+              <tr><td>Milk</td><td>Tajikistan and Turkey</td><td>Europe & Central Asia</td><td>-0.89</td></tr>
+            </tbody>
+
+            <caption>Regionaal: 1524 correlaties, 41% met een r boven de 0,4</caption>
+          </table>
+        </div>
+
+        <div class="card" style="width: 650px; margin-left: 50px; margin-right: 50px">
+          <table class="table table-striped table-bordered no-margin">
+            <thead>
+              <tr><td>Product</td><td>Correlatie tussen</td><td>Regio</td><td>r</td></tr>
+            </thead>
+
+            <tbody>
+              <tr><td>Diesel</td><td>Lao People's Democratic Republic and Ukraine</td><td>East Asia & Pacific, Europe & Central Asia</td><td>0.97</td></tr>
+              <tr><td>Petrol</td><td>Colombia and Lao People's Democratic Republic</td><td>Latin America & Caribbean, East Asia & Pacific</td><td>0.97</td></tr>
+              <tr><td>Wheat flour</td><td>Cape Verde and Sri Lanka</td><td>Sub-Saharan Africa, South Asia</td><td>0.97</td></tr>
+              <tr><td>[…]</td><td>[…]</td><td>[…]</td><td>[…]</td></tr>
+              <tr><td>Rice</td><td>Nigeria and Timor-Leste</td><td>Sub-Saharan Africa, East Asia & Pacific</td><td>-0.93</td></tr>
+              <tr><td>Salt</td><td>Tajikistan and Yemen</td><td>Europe & Central Asia, Middle East & North Africa</td><td>-0.93</td></tr>
+              <tr><td>Rice</td><td>Tajikistan and Yemen</td><td>Europe & Central Asia, Middle East & North Africa</td><td>-0.94</td></tr>
+            </tbody>
+
+            <caption>Niet regionaal: 1754 correlaties, 38% met een r boven de 0,4</caption>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="seperator white-bg"></div>
+
+    <div class="section full green-bg">
+      <h3 class="white hint">2. Gemiddelde regionale correlaties</h3>
       <iframe src="average_correlation_between_countries_per_product.html" class="bokeh-iframe"></iframe>
     </div>
 
