--- a/index.html
+++ b/index.html
@@ -245,6 +245,21 @@
       <iframe src="sudan2alt.html" class="bokeh-iframe"></iframe>
     </div>
 
+    <div class="section ultra-dark-bg" style="padding-top: 100px; padding-bottom: 100px">
+      <div class="flex-center">
+        <p class="white" style="font-family: monospace">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/`&middot;.&cedil;<br>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/&cedil;...&cedil;`:&middot;<br>
+ &nbsp;&cedil;.&middot;&acute;  &cedil;   `&middot;.&cedil;.&middot;&acute;)<br>
+: &copy; ):&acute;;      &cedil;  {<br>
+ &nbsp;`&middot;.&cedil; `&middot;  &cedil;.&middot;&acute;\`&middot;&cedil;)<br>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`\\&acute;&acute;\&cedil;.&middot;&acute;<br>
+      <br>
+      &nbsp;&nbsp;&nbsp;&nbsp;datavis19
+        </p>
+      </div>
+    </div>
+
     <div class="section full white-bg padded">
       <h2 class="title text-center">Bronnen</h2>
 
