--- a/index.html
+++ b/index.html
@@ -270,6 +270,11 @@
       <iframe src="tomatoes_regional.html" class="bokeh-iframe"></iframe>
     </div>
 
+    <div class="section full white-bg">
+      <h3 class="hint">Extra: negatieve correlatie Cassava flour & leaves</h3>
+      <iframe src="cassave4.html" class="bokeh-iframe"></iframe>
+    </div>
+
     <div class="section full dark-bg">
       <h3 class="right white hint">Extra: conflicten in Zuid Soedan</h3>
       <div class="grid">
