--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="section full dark-bg">
       <div class="text-center">
-        <h1 class="white title" style="margin-top: 80px; margin-bottom: 10px">Productprjizen in ontwikkelingslanden</h1>
+        <h1 class="white title" style="margin-top: 80px; margin-bottom: 10px">Productprijzen in ontwikkelingslanden</h1>
         <p class="white">Een onderzoek naar verbanden tussen prijsfluctuaties op verschillende markten.</p>
         <p class="white" style="font-size: 12px; opacity: 0.7; font-family: monospace">[Gebruik pijltjestoetsen om te navigeren]</p>
       </div>
